<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorMultiSelectHighlight"
    android:backgroundTint="@android:color/holo_orange_light"
    tools:context="edu.tommytyngutexas.catcells.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtappname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginTop="11dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textColor="@android:color/background_light"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/about_app"
            android:textColor="?attr/colorBackgroundFloating"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/created"
            android:textColor="?attr/colorBackgroundFloating"
            android:textSize="28sp" />
    </LinearLayout>
</ScrollView>