<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="edu.tommytyngutexas.catcells.EntryActivity">

    <TextView
        android:id="@+id/go_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/hi_im_catcells"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="84dp" />

    <ScrollView
        android:id="@+id/modes"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="167dp">


        <LinearLayout
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical" />
    </ScrollView>

    <CheckBox
        android:id="@+id/back_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:text="@string/use_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/volume"
        android:layout_marginTop="4dp"
        android:text="@string/sfx_volume" />

    <SeekBar
        android:id="@+id/volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:max="100"
        android:progress="90"
        android:thumb="@drawable/catcellsthumb"/>

</RelativeLayout>